--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,7 +2,7 @@ NAME = philo_bonus
 
 FLAGS = -lpthread
 
-CFLAGS = -Wall -Werror -Wextra -fsanitize=thread -g
+CFLAGS = -Wall -Werror -Wextra
 
 CC = cc
 
